<resources>
    <string name="app_name">crypto-condition-android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_startdate">Select startdate</string>
    <string name="set_start_date">Start date</string>
    <string name="set_end_date">End date</string>
    <string name="set_tv_text">%s/%s/%s</string>
    <string name="apply_button">Apply</string>
    <string name="select_date">Select Date</string>
    <string name="trading_volume_date_string">The highest trading volume was recorded on %s</string>
    <string name="trading_volume_volume_string">%sB €</string>
    <string name="trading_volume_millions_volume_string">%sM €</string>
    <string name="dash">-</string>
    <string name="trading_volume">Trading volume</string>
    <string name="date">Date</string>
    <string name="bearish_trend">Bearish trend</string>
    <string name="days">DAYS</string>
    <string name="bearish_trend_dates_string">The trend was bearish %s - %s</string>
    <string name="bearish_trend_date">The trend was bearish on %s</string>
    <string name="buysell_price">%s €/₿</string>
    <string name="sell">SELL</string>
    <string name="best_buy_and_sell_dates_will_appear_here">Best dates to sell or buy</string>
    <string name="buy">BUY</string>
    <string name="buy_n_sell">Do not buy or sell</string>
    <string name="Date_picker_alert">Check dates startdate can\'t be larger than enddate!</string>
    <string name="check_dates">Check dates!</string>
    <string name="volume_not_available">Volume not available</string>
    <string name="no_bearish_trend_detected">No bearish trend detected</string>
</resources>